# CLAP

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
clap/: __init__.py  __main__.py  audit_packet.py  cli.py  config.py  data_gen.py  figures_tables.py  metrics.py  prompt_io.py  runner.py  schema.py
clap/adapters/: __init__.py  base.py  cached.py  mock_adapter.py  openai_adapter.py
data/: cases_base.jsonl  cases_family.jsonl
data/schema/: audit_packet.json  base_case.json  family_variant.json  model_output.json  suite.json
data/suites/: ambiguity.jsonl  nrt100.jsonl  policy_conflict.jsonl
experiments/: config.yaml  config_mock.yaml  config_schema.json
outputs/audit_packets/: audit_packet_mock_v1.json  audit_packet_openai_gpt-4.1-mini.json
outputs/tables/: cfc_by_domain.csv  metrics_summary.csv
paper/: bib.bib  main.tex
paper/sections/: abstract.tex  dataset.tex  discussion.tex  ethics.tex  experiments.tex  governance.tex  intro.tex  limitations.tex  methods.tex  metrics.tex  related.tex  results.tex
snapshots/2026-02-13/: README_T0.txt  config.yaml
snapshots/2026-02-13/outputs/: run_progress.json
snapshots/2026-02-13/outputs/tables/: cfc_by_domain.csv  metrics_summary.csv
tests/: __init__.py  test_data_gen.py  test_metrics.py  test_prompt_io.py  test_schema.py  test_smoke.py
